feat: production Docker + Nginx setup with env-based CORS config
- backend/Dockerfile: multi-stage Maven build → JRE 21 runtime
- frontend/Dockerfile: multi-stage Node build → Nginx static server
- frontend/nginx.conf: serves SPA, proxies /api + OAuth2 to backend
- docker-compose.yml: wires frontend + backend, all config via env vars
- .env.example: template for all required environment variables
- SecurityConfig: CORS origins now read from APP_CORS_ORIGINS env var
- application.properties: SPRING_DATASOURCE_URL and APP_CORS_ORIGINS overridable (local only)